MNEMOSYNE 2.0

(Note that for Windows users we recommend uninstalling the previous
version before doing an upgrade.)

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your 
old data as xml. After upgrade, create a new database and import the old data
from the xml file.
	
MNEMOSYNE 1.1 :
	
-New cards can either be learned in random order or in the order that they 
 were added (configurable through the GUI).
-Prioritise cards forgotten during the review over cards which have not yet 
 been committed to long-term memory.
-Improved scheduling of overdue cards, by placing those with a shorter 
 interval first. Being a day late on an interval of 2 could be much worse 
 than being a day late on an interval of 50.
-Hebrew translation by Mical T.
	

	
MNEMOSYNE 1.0.2 : 2008-07-10

-Added import/export support for CueCard wcu files (Chris Aakre).
-Added features to improve display of map cards from svgtoquiz (Timothy 
 Bourke).
-Added support for Mac installer through py2app (Konrad Wojas).
-On OSX, Mnemosyne now stores its data in Library/Mnemosyne (Konrad Wojas).
-Added <protect>...</protect> tags. Text within these tags will not be
 touched by 'increase size of non-latin characters' (Konrad Wojas).
-Changed compression format of the backups from bz2 to gz. This results in
 less compression, but a much faster program exit (suggested by Konrad Wojas).
-Added midi files to "import sound" file dialog (suggested by Johan Forsberg).
-Polish translation by Tomasz Nazarenko.
-Japanese translation by Patrick Kenny.	
-Persian translation by Bahman Eslami.
-Brazilian Portugese translation by Fabio Kreusch.
-Make dvipng invocation more robust. Especially helpful for Ubuntu users.
 (Thanks to Stephen Boulet and franny1).
-Fixed bug where day_starts_at was not working (Konrad Wojas).
-Fixed bug where relative paths wouldn't work with non-standard directory
 locations (reported by reynard and stvltvs).