@@ -1,9 +1,5 @@
 Mnemosyne 1.1
 
--add hooks to filter strings before display
-
--example plugins: activate all categories, show last grade
-
 -polish shortcuts (tab + enter on search, enter same function as F3, 
 preview Alt-p). Reported by spboulet and varkhan1.
 
@@ -15,6 +11,8 @@ http://sourceforge.net/forum/message.php?msg_id=4894781
 -backport Christopher's Qt3 scrollbar patch?
 
 -add new translations to web
+
+-upload plugins
 
 
 
